fix unalign for sizePerPage dropdown and pagination list

--- a/packages/react-bootstrap-table2-paginator/style/react-bootstrap-table-paginator.scss
+++ b/packages/react-bootstrap-table2-paginator/style/react-bootstrap-table-paginator.scss
@@ -1,3 +1,4 @@
-.react-bootstrap-table-pagination {
-  margin-top: 10px;
+.react-bootstrap-table-page-btns-ul {
+  float: right;
+  margin-top: 0px;
 }
